--- a/RoboWalk/RoboWalk/RoboWalk.csproj
+++ b/RoboWalk/RoboWalk/RoboWalk.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="simulator\RobotSimulator.cs" />
+    <Compile Include="urdf\URDFparser.cs" />
     <EmbeddedResource Include="SimulatorForm.resx">
       <DependentUpon>SimulatorForm.cs</DependentUpon>
     </EmbeddedResource>
