--- a/RoboWalk/RoboWalk/RoboWalk.csproj
+++ b/RoboWalk/RoboWalk/RoboWalk.csproj
@@ -122,6 +122,7 @@
     <Compile Include="model\Visual.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="simulator\DrawCylinder.cs" />
     <Compile Include="simulator\RobotSimulator.cs" />
     <Compile Include="urdf\URDFparser.cs" />
     <EmbeddedResource Include="SimulatorForm.resx">
